@@ -130,6 +130,9 @@ the corresponding theory Plain should be ancestor of every further
 (instead of Main), thus theory Main occasionally has to be imported
 explicitly.
 
+* The metis method now fails in the usual manner, rather than raising an exception,
+if it determines that it cannot prove the theorem.
+
 * Methods "case_tac" and "induct_tac" now refer to the very same rules
 as the structured Isar versions "cases" and "induct", cf. the
 corresponding "cases" and "induct" attributes.  Mutual induction rules
